@@ -1,7 +1,7 @@
 mailadm system integration files
 ================================
 
-This README was generated by `mailadm {args}` and contains a complete
+This README was generated by `mailadm {args}` and contains a
 description of how you can get mailadm integrated with postfix,
 dovecot, nginx and systemd. The instructions here have been tested
 with an Ubuntu 16.04 and Debian 9 system. Other distributions or configurations
@@ -11,14 +11,17 @@ Development of `mailadm` takes place on:
 
     https://github.com/deltachat/mailadm
 
-Both mailadm web, prune and command line tools execute as the user
-`mailadm` and do not require root privileges. However, `mailadm`
-needs write permission to `{vmail_homedir}/{mail_domain}` sub directories.
-It is advised to perform this operation::
 
-    sudo chmod -R g+rwxs {vmail_homedir}/{mail_domain}
+Processes and permissions
+-------------------------------------------
 
-and make sure that the `{mailadm_user}` is a member of the `{vmail_user}` group.
+- systemd mailadm-web executes as user `{mailadm_user}`, serving
+  the web interface which is exposed through nginx (see below)
+
+- systemd mailadm-prune executes as group and user `{vmail_user}`
+  and removes users along with their home directory
+
+- the `{path_mailadm_db}` database is writeable by the group `{vmail_user}`
 
 
 Integration with dovecot
