@@ -4,6 +4,9 @@
 
 - fix permission issue in install and readme
 
+- make "mailadm-prune" systemd service run as vmail user
+  and set group for mailadm.db as vmail user.
+
 0.10.4
 -------------
 
